--- a/nginx.conf
+++ b/nginx.conf
@@ -13,7 +13,7 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
     access_log  /var/log/nginx/access.log;
-    sendfile        on;
+    sendfile        off;
     keepalive_timeout  65;
     gzip  on;
 
