run daemon without init.d; run as root

--- a/nginx.conf
+++ b/nginx.conf
@@ -21,7 +21,7 @@ http {
       listen 80;
       root /app;
       index index.php index.html index.htm;
-      server_name localhost;
+      server_name _;
 
       error_page 404 /404.html;
       error_page 500 502 503 504 /50x.html;
