--- a/nginx.conf
+++ b/nginx.conf
@@ -18,10 +18,9 @@ http {
     gzip  on;
 
     server {
-      listen 80;
+      listen 80 default_server;
       root /app;
       index index.php index.html index.htm;
-      server_name _;
 
       error_page 404 /404.html;
       error_page 500 502 503 504 /50x.html;
