add client max body size to enable panel uploads

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,5 @@
 user  root;
-worker_processes  1;
+worker_processes  4;
 
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
@@ -13,15 +13,16 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
     access_log  /var/log/nginx/access.log;
-    sendfile        off;
+    sendfile on;
+    client_max_body_size 300M;
     keepalive_timeout  65;
     gzip  on;
 
     server {
-      listen 80 default_server;
+      listen 80;
+      server_name _;
       root /app;
       index index.php index.html index.htm;
-
       error_page 404 /404.html;
       error_page 500 502 503 504 /50x.html;
       location = /50x.html {
