--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,7 @@
 user  root;
 worker_processes  4;
 
-error_log  /var/log/nginx/error.log warn;
+error_log  /var/log/nginx/error.log info;
 pid        /var/run/nginx.pid;
 
 events {
