--- a/nginx.conf
+++ b/nginx.conf
@@ -12,11 +12,18 @@ http {
 
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
-    access_log  /var/log/nginx/access.log;
-    sendfile on;
+
+    #access_log  /var/log/nginx/access.log;
+
+    access_log /dev/stdout;
+    error_log stderr;
+
+    sendfile off;
+    expires off;
+    gzip off;
+
     client_max_body_size 300M;
     keepalive_timeout  65;
-    gzip  on;
 
     server {
       listen 80;
